[package]
name = "aoc-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
cached = "0.54.0"
fxhash = "0.2.1"
itertools = "0.13.0"
pathfinding = "4.11.0"
rayon = "1.10.0"
regex = "1.11.1"

[profile.release]
opt-level = 3
overflow-checks = true
